# task-distribution

./: .gitmodules  CMakeLists.txt  README.md  test.sh
example/: CMakeLists.txt  example.cpp
include/: archive_info.hpp  archive_key.hpp  compile_utils.hpp  computing_unit.hpp  computing_unit_impl.hpp  computing_unit_manager.hpp  computing_unit_manager_mpi.hpp  debug.hpp  dependency_analyzer.hpp  function_traits.hpp  key.hpp  runnable.hpp  task.hpp  task_entry.hpp  task_impl.hpp  task_manager.hpp  task_manager_impl.hpp  task_manager_mpi.hpp  tuple_convert.hpp  tuple_serialize.hpp
src/: CMakeLists.txt  archive_info.cpp  computing_unit.cpp  computing_unit_manager.cpp  computing_unit_manager_mpi.cpp  key.cpp  main.cpp  runnable.cpp  task.cpp  task_manager.cpp  task_manager_mpi.cpp
test/: CMakeLists.txt  computing_unit.cpp  computing_unit_manager.cpp  computing_unit_manager_mpi.cpp  computing_unit_mpi.cpp  task_manager.cpp  test_computing_unit.hpp  test_mpi_main.cpp
